# cubane

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  splash.html  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  appState.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: date.rs  explorer.rs  files.rs  filesystem.rs  main.rs  sort.rs  splash.rs
src/components/: FileNode.tsx  Header.tsx  Home.tsx  SideBar.tsx
src/components/ActivityBar/: ActivityBarButton.tsx  index.tsx
src/components/CommandPalette/: CommandNode.tsx  index.tsx
src/components/Context/: index.tsx
src/components/Editor/Markdown/: index.tsx
src/components/File/: FileContext.tsx  index.tsx
src/components/FileNode/: index.tsx
src/components/Header/: index.tsx
src/components/Help/: Help.tsx  HelpMenuComponent.tsx  help.html  index.tsx  main.tsx  styles.css
src/components/Home/: HomeCommandButton.tsx  index.tsx
src/components/Markdown/: MarkdownEditorView.tsx  counter.tsx  index.tsx  toolbar.css  toolbar.tsx
src/components/Memories/: MemoryContext.tsx  context.tsx  index.tsx  memory.tsx
src/components/Page/: index.tsx
src/components/Settings/: GeneralSettingsMenu.tsx  SettingsMenuButton.tsx  general.tsx  index.tsx
src/components/Sidebar/: FileNodeList.tsx  index.tsx
src/components/Splash/: SplashHeader.tsx  SplashScreen.tsx  header.tsx  index.tsx  main.tsx
src/const/: state.ts
src/hooks/: useAppState.ts
src/lib/: utils.ts
src/state/: appState.ts
src/utils/: fs.tsx  sort.ts
(+2 files in other folders)
