[package]
name = "cubane"
version = "0.0.1"
description = "cubane"
authors = ["Bamboooz"]
license = "BSD-3-Clause"
repository = "https://github.com/Bamboooz/cubane"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "global-shortcut-all", "fs-create-dir", "fs-remove-file", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-exists", "window-unminimize", "window-unmaximize", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-show", "window-hide", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
